#ifndef DIRECTION_H
#define DIRECTION_H

// Kierunki ruchu robota
enum class Direction {
    Up,
    Right,
    Down,
    Left
};

#endif // DIRECTION_H
